--- a/main/style.css
+++ b/main/style.css
@@ -1,6 +1,81 @@
+*{
+	padding: 0;
+	margin: 0;
+	border: 0;
+}
+*,*:before,*:after{
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
+:focus,:active{outline: none;}
+a:focus,a:active{outline: none;}
+
+nav,footer,header,aside{display: block;}
+
+html,body{
+	height: 100%;
+	width: 100%;
+	font-size: 100%;
+	line-height: 1;
+	font-size: 14px;
+	-ms-text-size-adjust: 100%;
+	-moz-text-size-adjust: 100%;
+	-webkit-text-size-adjust: 100%;
+}
+input,button,textarea{font-family:inherit;}
+
+input::-ms-clear{display: none;}
+button{cursor: pointer;}
+button::-moz-focus-inner {padding:0;border:0;}
+a, a:visited{text-decoration: none;}
+a:hover{text-decoration: none;}
+ul li{list-style: none;}
+img{vertical-align: top;}
+
+h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
+/*********************MAIN-STYLE**************/
 .wrapper{
 	width: 100%;
 	min-height: 100%;
 	flex: 1 1 auto;
 	background-color: rgb(70, 68, 68);
+}
+.-container{
+	max-width: 1500px;
+	margin: 0px auto;
+	padding: 0px 15px;
+}
+
+/*********************HEADER**************/
+.header {
+	background-color: rgb(230, 195, 131);
+	position: absolute;
+	width: 100%;
+	left: 0;
+	top: 0;
+	z-index: 50;
+}
+.header-container {
+	min-height: 100px;
+	display: flex;
+
+}
+.header-item {
+	
+}
+.header-logo {
+}
+.header-item__list {
+}
+.list-item {
+	padding: 10px;
+}
+
+/*********************MAIN**************/
+.main {
+}
+
+/*********************FOOTER**************/
+.footer {
 }
