--- a/main/style.css
+++ b/main/style.css
@@ -41,7 +41,7 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 	flex: 1 1 auto;
 	background-color: rgb(70, 68, 68);
 }
-.-container{
+.main-container {
 	max-width: 1500px;
 	margin: 0px auto;
 	padding: 0px 15px;
@@ -56,20 +56,42 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 	top: 0;
 	z-index: 50;
 }
-.header-container {
-	min-height: 100px;
+.header__container {
 	display: flex;
+	align-items: center;
+	min-height: 85px;
+}
+
+.header__logo {
+	font-weight: 700;
+	font-size: 24px;
+	line-height: 32px;
+	color: rgb(175, 176, 177);
+	margin-right: 74px;
+}
+.header__menu {
 
 }
-.header-item {
-	
+.menu {
 }
-.header-logo {
+.menu__list {
+	display: flex;
+	flex-wrap: wrap;
 }
-.header-item__list {
+.menu__item {
+	border: 1px solid #111;
+	border-radius: 12px;
+	padding: 3px;
+	background-color: rgb(237, 237, 176);
 }
-.list-item {
-	padding: 10px;
+.menu__item:not(:last-child){
+	margin-right: 40px;
+}
+.menu__link {
+	font-size: 14px;
+	color: brown;
+	line-height: 24px;
+	font-weight: 500;
 }
 
 /*********************MAIN**************/
