--- a/main/style.css
+++ b/main/style.css
@@ -40,6 +40,7 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 	min-height: 100%;
 	flex: 1 1 auto;
 	background-color: rgb(70, 68, 68);
+	font-family: 'Red Hat Mono', monospace;
 }
 .main-container {
 	max-width: 1500px;
@@ -59,6 +60,7 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 .header__container {
 	display: flex;
 	align-items: center;
+	min-height: 85px;
 	max-height: 85px;
 }
 
@@ -68,6 +70,7 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 	line-height: 32px;
 	color: rgb(175, 176, 177);
 	margin-right: 74px;
+	align-items: center;
 }
 .header__menu {
 
@@ -77,6 +80,8 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 .menu__list {
 	display: flex;
 	flex-wrap: wrap;
+	align-items: center;
+
 }
 .menu__item {
 	border: 1px solid #111;
@@ -96,10 +101,11 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 
 /*********************MAIN**************/
 .main {
-	position: relative;
+	top: 0;
+	left: 0;
+	margin-top: 85px;
 }
 .main-container {
-	padding-top: 114px;
 }
 
 /*********************FOOTER**************/
