--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,9 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 	flex-wrap: wrap;
 	background-color: #ffffff;
 	padding: 20px 10px;
+	position: fixed;
+	z-index: 50;
+	width: 100%;
 }
 
 .wrap-logo {
@@ -92,6 +95,18 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 	display: flex;
 	align-items: center;
 	}
+.header__a1{
+	margin-left: 1000px;
+	color: #212121;
+	padding: 12px;
+	text-decoration: none;
+	font-size: 18px; 
+	border-radius: 4px;
+}
+.header__a1:hover {
+	background-color: #FBC02D;
+	color: #212121;
+}
 
 /**************pr************************/
 
@@ -100,25 +115,38 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 
 }
 .pr__fon{
-
+	min-height: 800px;
+	background: url(/img/fon1.jpg);
 }
 .pr__container {
 	margin-left: 250px;
-	max-width: 500px;
+
 }
 .pr__mainel{
-
+	position: absolute;
+	top: 50%;
+	max-width: 500px;
+	background-color: #c9c9c91e;
+	padding: 40px;
+	border: 2px solid black;
+	border-radius: 15px;
+	font-size: 18px;
+	color: #ffffff;
+	text-shadow: 1px 1px 2px black;
 }
 .pr__el1 {
-
+	margin-left: 150px;
+	margin-bottom: 30px;
 }
 .prel1__text {
+	
 }
 .pr__el2 {
 
 
 }
 .prel2text {
+
 }
 
 /**************pr************************/
@@ -128,17 +156,25 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 /**************about************************/
 
 .about {
-	margin-top: 100px;
+
 }
 .about__container {
 	display: flex;
 	justify-content: center;
+	background: url(/img/fon3.jpg);
+	height: 700px;
 }
 .about__mainel {
+	background-color: #c9c9c91e;
 	padding: 40px;
 	border: 2px solid black;
 	border-radius: 15px;
 	max-width: 500px;
+	top: 50%;
+	margin: 200px 200px 200px 200px;
+	margin-bottom: 200px;
+	font-size: 18px;
+	color: #ffffff;
 }
 .about__el1 {
 	display: flex;
@@ -166,7 +202,6 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 
 
 .main {
-	width: 100%;
 	height: 100%;
 	top: 0;
 	left: 0;
@@ -178,18 +213,32 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 .content-lg {
 }
 .container {
+	min-height: 800px;
+	background: url(/img/1625863538_8-kartinkin-com-p-kiberbezopasnost-oboi-krasivie-9.png);
 }
 .row {
 	display: flex;
+	justify-content: center;
+	margin: 0 auto;
 }
 .col-sm-4 {
-	flex-direction: column;
-	max-width: 30%;
-	margin: 200px 200px 200px 200px;
+
+
 }
 .sm-margin-b-50 {
 }
 .wow {
+	flex-direction: column;
+	max-width: 400px;
+	margin: 100px 100px 100px 100px;
+	background-color: #c9c9c91e;
+	border: 2px solid black;
+	border-radius: 15px;
+	padding: 40px;
+	
+	margin-top: 200px;
+	font-size: 18px;
+	color: #ffffff;
 }
 .fadeInLeft {
 }
